# clip-rust

./: Cargo.toml
migrations/: 20221101105816_api_key.sql
src/lib/: mod.rs
src/lib/data/: mod.rs  model.rs
src/lib/domain/: maintenance.rs  time.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: content.rs  expires.rs  password.rs  shortcode.rs  title.rs
src/lib/service/: action.rs  ask.rs
src/lib/web/: api.rs  ctx.rs  hitcounter.rs  http.rs  mod.rs  renderer.rs
templates/: clip_need_password.hbs
